<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.3</version>
    </parent>

    <groupId>fr.apithinking</groupId>
    <artifactId>apigreenscore</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Green-Score API</name>

    <description>Provides a tool to evaluate one API to obtain a green score based on API Green-Score rules
        referential
    </description>
    <url>https://github.com/API-Green-Score/APIGreenScore</url>
    <inceptionYear>2023</inceptionYear>
    <organization>
        <name>API Thinking / Api Green-Score</name>
        <url>https://github.com/API-Green-Score</url>
    </organization>
    <licenses>
        <license>
            <name>CC-By-NC-ND</name>
            <url>https://github.com/API-Green-Score/APIGreenScore/blob/main/LICENCE.md</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/API-Green-Score/APIGreenScore</connection>
        <developerConnection>scm:git:https://github.com/API-Green-Score/APIGreenScore</developerConnection>
        <url>https://github.com/API-Green-Score/APIGreenScore</url>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/API-Green-Score/APIGreenScore/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <name>Yannick TREMBLAIS</name>
            <email>ytremblais@users.noreply.github.com</email>
            <organization>API Thinking</organization>
            <url>https://github.com/ytremblais</url>
            <organizationUrl>https://github.com/API-Green-Score</organizationUrl>
        </developer>
        <developer>
            <name>David DE CARVALHO</name>
            <email>dedece35@users.noreply.github.com</email>
            <organization>API Thinking</organization>
            <url>https://github.com/dedece35</url>
            <organizationUrl>https://github.com/API-Green-Score</organizationUrl>
        </developer>
    </developers>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <sonar.organization>api-green-score</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>

        <springdoc.version>2.3.0</springdoc.version>
        <swagger-ui.version>5.3.1</swagger-ui.version>

        <lombok.version>1.18.30</lombok.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>

        <embedded-testcontainers.version>3.1.5</embedded-testcontainers.version>
        <assertj-core.version>3.25.3</assertj-core.version>

    </properties>

    <repositories>
        <repository>
            <id>repository.spring.milestone</id>
            <name>Spring Milestone Repository</name>
            <url>https://repo.spring.io/milestone</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>spring-milestones</id>
            <url>https://repo.spring.io/milestone</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j2</artifactId>
        </dependency>

        <!-- Spring Boot profile in the Log4j2 setting -->
        <!--        <dependency>-->
        <!--            <groupId>org.apache.logging.log4j</groupId>-->
        <!--            <artifactId>log4j-spring-boot</artifactId>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>org.springframework.data</groupId>-->
        <!--            <artifactId>spring-data-commons</artifactId>-->
        <!--        </dependency>-->
        <!--SpringDoc dependencies -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${springdoc.version}</version>
        </dependency>
        <!-- @Nullable annotation -->
        <!--        <dependency>-->
        <!--            <groupId>com.google.code.findbugs</groupId>-->
        <!--            <artifactId>jsr305</artifactId>-->
        <!--            <version>3.0.2</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>com.fasterxml.jackson.dataformat</groupId>-->
        <!--            <artifactId>jackson-dataformat-yaml</artifactId>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>com.fasterxml.jackson.datatype</groupId>-->
        <!--            <artifactId>jackson-datatype-jsr310</artifactId>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>org.openapitools</groupId>-->
        <!--            <artifactId>jackson-databind-nullable</artifactId>-->
        <!--            <version>0.2.6</version>-->
        <!--        </dependency>-->
        <!-- Bean Validation API support -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>com.fasterxml.jackson.core</groupId>-->
        <!--            <artifactId>jackson-databind</artifactId>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-mongodb</artifactId>
            <!--            <version>${springboot.version}</version>-->
        </dependency>

        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj-core.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.playtika.testcontainers</groupId>
            <artifactId>embedded-mongodb</artifactId>
            <version>${embedded-testcontainers.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Mandatory for playtika / embedded-mongodb -->
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-bootstrap</artifactId>
            <version>4.1.1</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <!--        <sourceDirectory>src/main/java</sourceDirectory>-->
        <plugins>
            <!--            <plugin>-->
            <!--                <groupId>org.springframework.boot</groupId>-->
            <!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
            <!--                <configuration>-->
            <!--                </configuration>-->
            <!--            </plugin>-->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.30</version>
                        </path>
                        <dependency>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>0.2.0</version>
                        </dependency>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <compilerArg>
                            -Amapstruct.defaultComponentModel=spring
                        </compilerArg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
